modules/tests/_kubernetes-policy/fixtures/edge-identity/normal-membership-not-exact-state/resources.yaml
apiVersion: v1
data:
  members.json: '["unauthorized"]'
  state.json: '{"groups":{"homelab-admin":{"members":[],"overwriteMembers":true}},"persons":{"daniel":{"displayName":"Daniel
    Vicory","mailAddresses":["daniel@danielvicory.dev"]}},"systems":{"oauth2":{"household-admin":{"allowInsecureClientDisablePkce":false,"displayName":"Household
    administration","originLanding":"https://argocd.plus2.danielvicory.dev/","originUrl":["https://argocd.plus2.danielvicory.dev/oauth2/callback","https://argocd.backup.plus2.danielvicory.dev/oauth2/callback","https://prowlarr.plus2.danielvicory.dev/oauth2/callback","https://prowlarr.backup.plus2.danielvicory.dev/oauth2/callback","https://radarr.plus2.danielvicory.dev/oauth2/callback","https://radarr.backup.plus2.danielvicory.dev/oauth2/callback","https://sabnzbd.plus2.danielvicory.dev/oauth2/ca [...]
kind: ConfigMap
metadata:
  name: kanidm-provision
  namespace: identity
